@@ -1,4 +1,4 @@
-\version "1.5.1"
+\version "1.5.49"
 
 \header {
   dedication = "dedication"
@@ -29,7 +29,7 @@ text = \lyrics {
   <
     \addlyrics
       \context Staff = one {
-        \property Staff.noAutoBeaming = ##t
+        \property Staff.autoBeaming = ##f
         \property Staff.automaticMelismata = ##t
         \melody
       }
