@@ -1,4 +1,4 @@
-\version "1.5.1"
+\version "1.5.49"
 
 \header {
   dedication = "dedication"
@@ -37,7 +37,7 @@ lower = \notes\relative c {
   <
     \addlyrics
       \context Staff = mel {
-        \property Staff.noAutoBeaming = ##t
+        \property Staff.autoBeaming = ##f
         \property Staff.automaticMelismata = ##t
         \melody
       }
